[package]
authors = ["ContainedBlargh <jon@zendata.dk>"]
edition = "2018"
name = "pretty-ls"
version = "0.1.0"
[[bin]]
name = "jls"
path = "src/ls.rs"

# [[bin]]
# name = "ls-config"
# path = "src/ls-config.rs"

[dependencies]
argparse = "0.2.2"
# cli_select = "0.1.4"
colored = "2.0.0"
# dirs = "*"
glob = "0.3.0"
indexmap = "*"
# lazy_static = "1.4.0"
regex = "1.5.5"
# serde_json = "1.0.79"
terminal_size = "0.2.5"

# [dependencies.serde]
# features = ["derive"]
# version = "1.0.136"

# [profile.release]
# opt-level = "z"
# lto = true
# panic = "abort"

