[package]
authors = ["ContainedBlargh <jon@zendata.dk>"]
edition = "2018"
name = "jon-ls"
version = "0.1.0"
opt-level = 3
[[bin]]
name = "jls"
path = "src/ls.rs"

# [[bin]]
# name = "ls-config"
# path = "src/ls-config.rs"

[dependencies]
rayon = "1.6.1"
argparse = "0.2.2"
colored = "2.0.0"
glob = "0.3.0"
indexmap = "1.9.2"
regex = "1.5.5"
terminal_size = "0.2.5"

# [dependencies.serde]
# features = ["derive"]
# version = "1.0.136"

# [profile.release]
# opt-level = "z"
# lto = true
# panic = "abort"

